navBar/services supp

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <li class="active"><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
                 <li><a href="shampoings-soins.html" class="nav-link">Shampoings & Soins</a></li>
-                <li><a href="entretien.html" class="nav-link">L'entretien</a></li>
+                <li><a href="entretien.html" class="nav-link">Entretien</a></li>
                 <li><a href="photos.html" class="nav-link">Photos Avant Après</a></li>
                 <li><a href="prestations-rdv.html" class="nav-link">Prestations & Rdv</a></li>
               </ul>
@@ -102,7 +102,7 @@
             <div class="col-md-10">
               <h1 class="mb-3">PRENEZ UN TEMPS POUR VOUS !</h1>
               <p>Extensions naturelles uniquement Qualité "Rémy Hair"</p>
-              <p><a href="#" class="btn btn-primary">Learn More</a></p>
+              <!-- <p><a href="#" class="btn btn-primary">Learn More</a></p> -->
             </div>
           </div>
         </div>
@@ -122,7 +122,7 @@
 
           </div>
           <div class="col-lg-5 ml-auto pl-lg-5 text-center">
-            <h3 class="scissors text-center">Bienvenue sur R'EXTENSE!</h3>
+            <h3 class="scissors text-center">Bienvenue chez R'EXTENSE!</h3>
             <p class="mb-5 lead">L'extension cheveux naturel à froid permet d'avoir les cheveux longs et de gagner en
               volume pour coiffer vos
               cheveux (queue de cheval, tresse épis...) changer de tête, de couleur de cheveux selon vos envies.
@@ -130,7 +130,7 @@
               parfaitement dans vos cheveux naturels. L'extension à froid naturelle est posée à l'aide d'un connecteur
               de
               fixation ou anneaux à froid avec une pince spéciale extensions capillaires. </p>
-            <p><a href="#" class="btn btn-primary">Learn More</a></p>
+            <!-- <p><a href="#" class="btn btn-primary">Learn More</a></p> -->
           </div>
         </div>
       </div>
@@ -160,7 +160,7 @@
               <div class="item-1 h">
                 <img src="images/devis gratuit sur mesure.jpg" alt="Image" class="img-fluid">
                 <div class="item-1-contents">
-                  <h3>Devis gratuit sur mesure</h3>
+                  <h3>Devis gratuit <br> sur mesure</h3>
                   <!-- <ul>
                     <li class="d-flex"><span>Men's Cut</span> <span class="price ml-auto">$29.00</span></li>
                     <li class="d-flex"><span>Men's Cut with Shampoo and Blow Dry</span><span
@@ -175,9 +175,9 @@
               </div>
 
               <div class="item-1 h">
-                <img src="images/dépose d'extensions à froid.jpg" alt="Image" class="img-fluid">
+                <img src="images/dépose d'extensions à froid2.jpg" alt="Image" class="img-fluid">
                 <div class="item-1-contents">
-                  <h3>Dépose d’extensions</h3>
+                  <h3>Dépose <br>d’extensions</h3>
                   <!-- <ul>
                     <li class="d-flex"><span>Shampoo</span> <span class="price ml-auto">$29.00</span></li>
                     <li class="d-flex"><span>Blow Dry</span><span class="price ml-auto">$10.00</span></li>
@@ -190,9 +190,9 @@
               </div>
 
               <div class="item-1 h">
-                <img src="images/prestatio pose d'extensions.jpg" alt="Image" class="img-fluid">
+                <img src="images/prestatio pose d'extensions4.jpg" alt="Image" class="img-fluid">
                 <div class="item-1-contents">
-                  <h3>Pose d’extensions</h3>
+                  <h3>Pose <br> d’extensions </h3>
                   <!-- <ul>
                     <li class="d-flex"><span>Shampoo</span> <span class="price ml-auto">$29.00</span></li>
                     <li class="d-flex"><span>Blow Dry</span><span class="price ml-auto">$10.00</span></li>
@@ -205,9 +205,9 @@
               </div>
 
               <div class="item-1 h">
-                <img src="images/coiffure steampod.jpg" alt="Image" class="img-fluid">
+                <img src="images/coiffure steampod2.jpg" alt="Image" class="img-fluid">
                 <div class="item-1-contents">
-                  <h3>Coiffage au Steampod de l’Oréal</h3>
+                  <h3>Coiffage Steampod <br>de l’Oréal</h3>
                   <!-- <ul>
                     <li class="d-flex"><span>Shampoo</span> <span class="price ml-auto">$29.00</span></li>
                     <li class="d-flex"><span>Blow Dry</span><span class="price ml-auto">$10.00</span></li>
@@ -304,7 +304,7 @@
             <div class="service-1">
               <span class="service-1-icon">
                 <div class="d-flex v-card align-items-center mb-4">
-                  <img src="images/devis gratuit service supp.jpg" alt="Image" class="img-fluid mr-3">
+                  <img src="images/devis gratuit service supp2.jpg" alt="Image" class="img-fluid mr-3">
                 </div>                
 
               </span>
@@ -318,7 +318,7 @@
             <div class="service-1">
               <span class="service-1-icon">
                <div class="d-flex v-card align-items-center mb-4">
-                  <img src="images/photo 3 sur site.jpg" alt="Image" class="img-fluid mr-3">
+                  <img src="images/photo 3 sur site2.jpg" alt="Image" class="img-fluid mr-3">
                 </div>   
               </span>
               <div class="service-1-contents">
@@ -332,7 +332,7 @@
               <span class="service-1-icon">
                 <!-- <span class="flaticon-scissors"></span> -->
                 <div class="d-flex v-card align-items-center mb-4">
-                  <img src="images/conseils d.jpg" alt="Image" class="img-fluid mr-3">
+                  <img src="images/conseils d2.jpg" alt="Image" class="img-fluid mr-3">
                 </div> 
               </span>
               <div class="service-1-contents">
@@ -361,7 +361,7 @@
               <span class="service-1-icon">
                 <!-- <span class="flaticon-hair"></span> -->
                 <div class="d-flex v-card align-items-center mb-4">
-                  <img src="images/ecoute et dispo.jpg" alt="Image" class="img-fluid mr-3">
+                  <img src="images/ecoute et dispo2.jpg" alt="Image" class="img-fluid mr-3">
                 </div>
               </span>
               <div class="service-1-contents">
@@ -514,7 +514,9 @@
             <h2 class="text-white scissors primary-color-icon text-center">"Rémy Hair"</h2>
             <p class="lead text-white mb-5">Extensions naturelles uniquement Qualité "Rémy Hair"</p>
             <p class="lead text-white mb-5">Vous n'avez plus qu'à déterminer la longueur que vous souhaitez obtenir selon le résultat voulu, mais aussi si le volume est important pour vous. Pour cela, nous ferons un devis sur mesure.</p>
-            <p><a href="#" class="btn btn-primary">Contactez Moi</a></p>
+            <p><a  href="prestations-rdv.html" class="btn btn-primary">Contactez Moi</a></p>
+            <!-- <li><a href="prestations-rdv.html" class="nav-link">Prestations & Rdv</a></li> -->
+
           </div>
         </div>
       </div>
