--- a/entretien.html
+++ b/entretien.html
@@ -64,7 +64,7 @@
                   <li ><a href="index.html" class="nav-link">Home</a></li>
                   <li><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
                   <li><a href="shampoings-soins.html" class="nav-link">Shampoings & Soins</a></li>
-                  <li class="active"><a href="entretien.html" class="nav-link">L'entretien</a></li>
+                  <li class="active"><a href="entretien.html" class="nav-link">Entretien</a></li>
                   <li><a href="photos.html" class="nav-link">Photos Avant Après</a></li>
                   <li><a href="prestations-rdv.html" class="nav-link">Prestations & Rdv</a></li>
                 </ul>
