--- a/entretien.html
+++ b/entretien.html
@@ -374,7 +374,7 @@ La seule différence est qu’il ne se rince pas. Il vous permet donc un entreti
             <p class="lead text-white mb-5">
 
             </p>
-            <p><a href="#" class="btn btn-primary">Contact Us Now</a></p>
+            <p><a href="prestations-rdv.html" class="btn btn-primary">Contactez moi</a></p>
           </div>
         </div>
       </div>
