--- a/extensions-naturelles.html
+++ b/extensions-naturelles.html
@@ -91,7 +91,7 @@
               <h1 class="mb-3">EXTENSIONS NATURELLES</h1>
               <p>Lorsque l’on parle d’extensions de cheveux, les termes Remy hair ou non Remy hair apparaitront régulièrement notamment dans les conversations des professionnels de la coiffure. Cependant, la plupart d’entre vous ne savent pas ce que cela signifie réellement. <br>
                 Vous trouverez donc toutes les réponses à ce sujet. </p>
-              <p><a href="#" class="btn btn-primary">Learn More</a></p>
+              <!-- <p><a href="#" class="btn btn-primary">Learn More</a></p> -->
             </div>
           </div>
         </div>
@@ -266,7 +266,7 @@
             <!-- <p class="lead text-white mb-5">Ils existent plusieurs différences entre les cheveux de qualité « Remy hair » et non « Remy hair ». Je vais vous expliquer plus en détails quelles sont les principales différences.</p> -->
               <h3 class="text-white text-center">La qualité des cheveux</h3>
             <p class="lead text-white mb-5">Les cheveux Remy Hair ont une apparence plus naturelle, plus brillante et plus lisse, que les cheveux qui ne sont pas « Remy Hair ». Cela est dû à la méthode de collecte des cheveux. </p>
-            <p><a href="#" class="btn btn-primary">Contactez Moi</a></p>
+            <p><a href="prestations-rdv.html" class="btn btn-primary">Contactez Moi</a></p>
           </div>
         </div>
       </div>
@@ -316,7 +316,7 @@
         <div class="row">
           <div class="col-lg-3">
             <img src="images/photo M.jpg" alt="Image" class="img-fluid mb-5">
-            <h2 class="footer-heading mb-3">About Me</h2>
+            <h2 class="footer-heading mb-3">A propos de moi</h2>
             <p>Technicienne spécialiste des extensions de cheveux à froid.
               je mets mon expertise à votre service sur Gargenville et les communes limitrophes à mon domicile ou
               directement chez vous.</p>
