--- a/shampoings-soins.html
+++ b/shampoings-soins.html
@@ -86,7 +86,7 @@
                 EXTENSIONS ?</h1>
               <p>Après avoir réalisé une pose d’extensions de cheveux, il est important d’appliquer une routine
                 particulière pour en prendre soin.</p>
-              <p><a href="#" class="btn btn-primary">Learn More</a></p>
+              <!-- <p><a href="#" class="btn btn-primary">Learn More</a></p> -->
             </div>
           </div>
         </div>
@@ -239,7 +239,7 @@
             <p class="lead text-white mb-5">Il est recommandé d’utiliser un après-shampoing ainsi que des soins
               capillaires pour nourrir vos extensions. Dans l’idéal, il faudrait même utiliser des masques et sérum pour
               préserver vos extensions au maximum.</p>
-            <p><a href="#" class="btn btn-primary">Contactez Moi</a></p>
+            <p><a href="prestations-rdv.html" class="btn btn-primary">Contactez Moi</a></p>
           </div>
         </div>
       </div>
