--- a/photos.html
+++ b/photos.html
@@ -85,7 +85,7 @@
             <div class="col-md-7">
               <h1 class="mb-3">PHOTOS AVANT / APRES </h1>
               
-              <p><a href="#" class="btn btn-primary">Learn More</a></p>
+              <!-- <p><a href="#" class="btn btn-primary">Learn More</a></p> -->
             </div>
           </div>
         </div>
@@ -211,7 +211,7 @@
             <h2 class="text-white scissors primary-color-icon text-center">Coupe de qualité</h2>
             <!-- <p class="lead text-white mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam quo
               doloribus, suscipit libero, voluptate aliquam.</p> -->
-            <p><a href="#" class="btn btn-primary">Contactez Moi</a></p>
+            <p><a href="prestations-rdv.html" class="btn btn-primary">Contactez Moi</a></p>
           </div>
         </div>
       </div>
