--- a/entretien.html
+++ b/entretien.html
@@ -20,7 +20,8 @@
 
   <!-- MAIN CSS -->
   <link rel="stylesheet" href="css/style.css">
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,600&display=swap" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -84,6 +85,8 @@
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-7">
               <h1 class="mb-3">L’ENTRETIEN</h1>
+              <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez vous</a></p>
+
               <!-- <p>Après la pose des extensions de cheveux, il vient naturellement la question de l’entretien de ses rajouts de cheveux ! Il est donc normal de se poser des questions.<br>
                 Voici donc quelques astuces à connaitre sur l’entretien des extensions à froid.
                 
@@ -374,7 +377,7 @@ La seule différence est qu’il ne se rince pas. Il vous permet donc un entreti
             <p class="lead text-white mb-5">
 
             </p>
-            <p><a href="prestations-rdv.html" class="btn btn-primary">Contactez moi</a></p>
+            <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez vous</a></p>
           </div>
         </div>
       </div>
