--- a/extensions-naturelles.html
+++ b/extensions-naturelles.html
@@ -20,7 +20,8 @@
 
   <!-- MAIN CSS -->
   <link rel="stylesheet" href="css/style.css">
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,600&display=swap" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -91,8 +92,8 @@
               <h1 class="mb-3">EXTENSIONS NATURELLES</h1>
               <p>Lorsque l’on parle d’extensions de cheveux, les termes Remy hair ou non Remy hair apparaitront régulièrement notamment dans les conversations des professionnels de la coiffure. Cependant, la plupart d’entre vous ne savent pas ce que cela signifie réellement. <br>
                 Vous trouverez donc toutes les réponses à ce sujet. </p>
-              <!-- <p><a href="#" class="btn btn-primary">Learn More</a></p> -->
-            </div>
+                <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez vous</a></p>
+              </div>
           </div>
         </div>
       </div>
@@ -266,7 +267,7 @@
             <!-- <p class="lead text-white mb-5">Ils existent plusieurs différences entre les cheveux de qualité « Remy hair » et non « Remy hair ». Je vais vous expliquer plus en détails quelles sont les principales différences.</p> -->
               <h3 class="text-white text-center">La qualité des cheveux</h3>
             <p class="lead text-white mb-5">Les cheveux Remy Hair ont une apparence plus naturelle, plus brillante et plus lisse, que les cheveux qui ne sont pas « Remy Hair ». Cela est dû à la méthode de collecte des cheveux. </p>
-            <p><a href="prestations-rdv.html" class="btn btn-primary">Contactez Moi</a></p>
+            <!-- <p><a href="prestations-rdv.html" class="btn btn-primary">Contactez Moi</a></p> -->
           </div>
         </div>
       </div>
@@ -299,7 +300,7 @@
             <p class="lead text-white mb-5">Enfin, le meilleur avantage des Remy hair est que vous pouvez les boucler, les lisser et les laver comme vos cheveux naturels sans aucun dommage.</p>
            
             
-            <p><a href="#" class="btn btn-primary">Contactez Moi</a></p>
+            <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez vous</a></p>
           </div>
         </div>
       </div>
