--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-  <title>R'EXTENSE</title>
+  <title>R'EXTENSE : pose d'extensios à gargenville</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -26,7 +26,8 @@
 
   <!-- MAIN CSS -->
   <link rel="stylesheet" href="css/style.css">
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,600&display=swap" rel="stylesheet">
 </head>
 
 
@@ -102,7 +103,7 @@
             <div class="col-md-10">
               <h1 class="mb-3">PRENEZ UN TEMPS POUR VOUS !</h1>
               <p>Extensions naturelles uniquement Qualité "Rémy Hair"</p>
-              <!-- <p><a href="#" class="btn btn-primary">Learn More</a></p> -->
+              <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez vous</a></p>
             </div>
           </div>
         </div>
@@ -514,7 +515,7 @@
             <h2 class="text-white scissors primary-color-icon text-center">"Rémy Hair"</h2>
             <p class="lead text-white mb-5">Extensions naturelles uniquement Qualité "Rémy Hair"</p>
             <p class="lead text-white mb-5">Vous n'avez plus qu'à déterminer la longueur que vous souhaitez obtenir selon le résultat voulu, mais aussi si le volume est important pour vous. Pour cela, nous ferons un devis sur mesure.</p>
-            <p><a  href="prestations-rdv.html" class="btn btn-primary">Contactez Moi</a></p>
+            <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez vous</a></p>
             <!-- <li><a href="prestations-rdv.html" class="nav-link">Prestations & Rdv</a></li> -->
 
           </div>
