--- a/photos.html
+++ b/photos.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Barberz &mdash; Website Template by Colorlib</title>
+  <title>R'EXTENSE</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -20,7 +20,8 @@
 
   <!-- MAIN CSS -->
   <link rel="stylesheet" href="css/style.css">
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,600&display=swap" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -84,8 +85,7 @@
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-7">
               <h1 class="mb-3">PHOTOS AVANT / APRES </h1>
-              
-              <!-- <p><a href="#" class="btn btn-primary">Learn More</a></p> -->
+              <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez vous</a></p>
             </div>
           </div>
         </div>
@@ -211,7 +211,7 @@
             <h2 class="text-white scissors primary-color-icon text-center">Coupe de qualité</h2>
             <!-- <p class="lead text-white mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam quo
               doloribus, suscipit libero, voluptate aliquam.</p> -->
-            <p><a href="prestations-rdv.html" class="btn btn-primary">Contactez Moi</a></p>
+              <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez vous</a></p>
           </div>
         </div>
       </div>
