--- a/shampoings-soins.html
+++ b/shampoings-soins.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-  <title>Barberz &mdash; Website Template by Colorlib</title>
+  <title>R'Extense</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -20,7 +20,8 @@
 
   <!-- MAIN CSS -->
   <link rel="stylesheet" href="css/style.css">
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,600&display=swap" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -86,8 +87,8 @@
                 EXTENSIONS ?</h1>
               <p>Après avoir réalisé une pose d’extensions de cheveux, il est important d’appliquer une routine
                 particulière pour en prendre soin.</p>
-              <!-- <p><a href="#" class="btn btn-primary">Learn More</a></p> -->
-            </div>
+                <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez vous</a></p>
+              </div>
           </div>
         </div>
       </div>
@@ -239,7 +240,7 @@
             <p class="lead text-white mb-5">Il est recommandé d’utiliser un après-shampoing ainsi que des soins
               capillaires pour nourrir vos extensions. Dans l’idéal, il faudrait même utiliser des masques et sérum pour
               préserver vos extensions au maximum.</p>
-            <p><a href="prestations-rdv.html" class="btn btn-primary">Contactez Moi</a></p>
+              <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez vous</a></p>
           </div>
         </div>
       </div>
