--- a/single.html
+++ b/single.html
@@ -20,7 +20,8 @@
 
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="css/style.css">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,600&display=swap" rel="stylesheet">
   </head>
 
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
