--- a/entretien.html
+++ b/entretien.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Barberz &mdash; Website Template by Colorlib</title>
+  <title>R'EXTENSE</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -389,8 +389,8 @@ La seule différence est qu’il ne se rince pas. Il vous permet donc un entreti
       <div class="container">
         <div class="row">
           <div class="col-lg-3">
-            <img src="images/photo M.jpg" alt="Image" class="img-fluid mb-5">
-            <h2 class="footer-heading mb-3">About Me</h2>
+            <img src="images/Sam.jpg" alt="Image" class="img-fluid mb-5">
+            <h2 class="footer-heading mb-3">A propos de moi</h2>
             <p>Technicienne spécialiste des extensions de cheveux à froid.
               je mets mon expertise à votre service sur Gargenville et les communes limitrophes à mon domicile ou
               directement chez vous. </p>
