--- a/index.html
+++ b/index.html
@@ -529,8 +529,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-3">
-            <img src="images/photo M.jpg" alt="Image" class="img-fluid mb-5">
-            <h2 class="footer-heading mb-3">About me</h2>
+            <img src="images/Sam.jpg" alt="Image" class="img-fluid mb-5">
+            <h2 class="footer-heading mb-3">A propos de moi</h2>
             <p>Technicienne spécialiste des extensions de cheveux à froid.
               je mets mon expertise à votre service sur Gargenville et les communes limitrophes à mon domicile ou
               directement chez vous.</p>
