--- a/shampoings-soins.html
+++ b/shampoings-soins.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-  <title>R'Extense</title>
+  <title>R'EXTENSE</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -265,7 +265,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-3">
-            <img src="images/photo M.jpg" alt="Image" class="img-fluid mb-5">
+            <img src="images/Sam.jpg" alt="Image" class="img-fluid mb-5">
             <h2 class="footer-heading mb-3">A propos de moi</h2>
             <p>Technicienne spécialiste des extensions de cheveux à froid.
               je mets mon expertise à votre service sur Gargenville et les communes limitrophes à mon domicile ou
