--- a/extensions-naturelles.html
+++ b/extensions-naturelles.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>R'EXTENSE</title>
+  <title>R'EXTENSE : pose d'extensios à gargenville</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -325,21 +325,17 @@
           <div class="col-lg-8 ml-auto">
             <div class="row">
               <div class="col-lg-6 ml-auto">
-                <h2 class="footer-heading mb-4">Quick Links</h2>
+                <h2 class="footer-heading mb-4">Liens</h2>
                 <ul class="list-unstyled">
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Testimonials</a></li>
-                  <li><a href="#">Terms of Service</a></li>
-                  <li><a href="#">Privacy</a></li>
-                  <li><a href="#">Contact Us</a></li>
+                  <li><a href="prestations-rdv.html">Contacez moi</a></li>
                 </ul>
               </div>
               <div class="col-lg-6">
-                <h2 class="footer-heading mb-4">Newsletter</h2>
+                <!-- <h2 class="footer-heading mb-4">Newsletter</h2>
                 <form action="#" class="d-flex" class="subscribe">
                   <input type="text" class="form-control mr-3" placeholder="Email">
                   <input type="submit" value="Send" class="btn btn-primary">
-                </form>
+                </form> -->
               </div>
 
             </div>
