--- a/prestations-rdv.html
+++ b/prestations-rdv.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-  <title>R'EXTENSE</title>
+  <title>R'EXTENSE : pose d'extensios à gargenville</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -238,7 +238,7 @@
                   <input type="text" id="name" size=50 maxlength=50 class="form-control" placeholder="nom" required>
                 </div>
                 <div class="col-md-6">
-                  <input type="text" id="prenom" size=50 maxlength=50 class="form-control" placeholder="prenom" required>
+                  <input type="text" id="prenom" size=50 maxlength=50 class="form-control" placeholder="prénom" required>
                 </div>
               </div>
 
@@ -308,41 +308,21 @@
           <div class="col-lg-8 ml-auto">
             <div class="row">
               <div class="col-lg-6 ml-auto">
-                <h2 class="footer-heading mb-4">Quick Links</h2>
+                <h2 class="footer-heading mb-4">liens</h2>
                 <ul class="list-unstyled">
-                  <li><a href="#">A propos de moi</a></li>
+                  <!-- <li><a href="#">A propos de moi</a></li>
                   <li><a href="#">Testimonials</a></li>
                   <li><a href="#">Terms of Service</a></li>
-                  <li><a href="#">Privacy</a></li>
-                  <li><a href="#">Contact Us</a></li>
+                  <li><a href="#">Privacy</a></li> -->
+                  <li><a href="#contactez-moi">Contactez moi</a></li>
                 </ul>
               </div>
-              <div class="col-lg-6">
-                <h2 class="footer-heading mb-4">Newsletter</h2>
-                <form action="#" class="d-flex" class="subscribe">
-                  <input type="text" class="form-control mr-3" placeholder="Email">
-                  <input type="submit" value="Send" class="btn btn-primary">
-                </form>
+              <div class="col-lg-6">               
               </div>
 
             </div>
           </div>
-        </div>
-        <!-- <div class="row pt-5 mt-5 text-center"> -->
-        <!-- <div class="col-md-12"> -->
-        <!-- <div class="border-top pt-5"> -->
-        <!-- <p> -->
-        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        <!-- Copyright &copy;
-                <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
-                with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                  target="_blank">Colorlib</a> -->
-        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        <!-- </p> -->
-        <!-- </div> -->
-        <!-- </div> -->
-
-        <!-- </div> -->
+        </div>       
       </div>
     </footer>
 
