--- a/single.html
+++ b/single.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
   <head>
-    <title>R'EXTENSE</title>
+    <title>R'EXTENSE : pose d'extensios à gargenville</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
