resize pic entretien

--- a/entretien.html
+++ b/entretien.html
@@ -106,9 +106,9 @@
             <img src="images/photo 2 quels shampoings.jpg" alt="Image placeholder">
           </a>
         </div> -->
-        <h3>Après la pose des extensions de cheveux, il vient naturellement la question de l’entretien de ses rajouts de cheveux ! Il est donc normal de se poser des questions.
+        <p class="mb-5 lead">Après la pose des extensions de cheveux, il vient naturellement la question de l’entretien de ses rajouts de cheveux ! Il est donc normal de se poser des questions.
           Voici donc quelques astuces à connaitre sur l’entretien des extensions à froid.
-          </h3>
+        </p>
         <!-- <p class="mb-5 lead">Après la pose des extensions de cheveux, il vient naturellement la question de l’entretien
           de ses rajouts de
           cheveux ! Il est donc normal de se poser des questions du type : -->
@@ -158,7 +158,7 @@
         <div class="row">
           <div class="col-lg-6 mb-5 mb-lg-0">
             <div class="img-years">
-              <img src="images/photo 1 quels shampoings.jpg" alt="Image" class="img-fluid">
+              <img src="images/photo 1 quels shampoings3.jpg" alt="Image" class="img-fluid">
               <!-- <div class="year">
                 <span>-10% <span>POUR TOUTES NOUVELLES <br>CLIENTES </span></span>
               </div> -->
@@ -192,7 +192,7 @@
         <div class="row">
           <div class="col-lg-6 mb-5 mb-lg-0">
             <div class="img-years">
-              <img src="images/photo 3 entretenir les extensions.jpg" alt="Image" class="img-fluid">
+              <img src="images/photo 3 entretenir les extensions2.jpg" alt="Image" class="img-fluid">
               <!-- <div class="year">
                 <span>-10% <span>POUR TOUTES NOUVELLES <br>CLIENTES </span></span>
               </div> -->
