--- a/photos.html
+++ b/photos.html
@@ -208,7 +208,7 @@
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="col-7 text-center mb-5">
-            <h2 class="text-white scissors primary-color-icon text-center">Coupe de qualité</h2>
+            <h2 class="text-white scissors primary-color-icon text-center">Satisfaction garantie</h2>
             <!-- <p class="lead text-white mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam quo
               doloribus, suscipit libero, voluptate aliquam.</p> -->
               <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez vous</a></p>
