resize pic/photos

--- a/photos.html
+++ b/photos.html
@@ -101,11 +101,11 @@
               <div class="post-entry-1-contents">
                 <div class="photos-avant-apres">
                   <h2><a href="single.html">Avant</a></h2>
-                  <img src="images/photos avant apres/photo avant.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo avant1.jpg" alt="Image" class="img-fluid">
                 </div>
                 <div class="photos-apres-apres">
                   <h2><a href="single.html">Après</a></h2>
-                  <img src="images/photos avant apres/photo après 1.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo après 1.1.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -117,11 +117,11 @@
               <div class="post-entry-1-contents">
                 <div class="photos-avant-apres">
                   <h2><a href="single.html">Avant</a></h2>
-                  <img src="images/photos avant apres/photo avant 2.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo avant 2.2.jpg" alt="Image" class="img-fluid">
                 </div>
                 <div class="photos-apres-apres">
                   <h2><a href="single.html">Après</a></h2>
-                  <img src="images/photos avant apres/photo après 2.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo après 2.2.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -132,11 +132,11 @@
               <div class="post-entry-1-contents">
                 <div class="photos-avant-apres">
                   <h2><a href="single.html">Avant</a></h2>
-                  <img src="images/photos avant apres/photo avant 3.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo avant 3.1.jpg" alt="Image" class="img-fluid">
                 </div>
                 <div class="photos-apres-apres">
                   <h2><a href="single.html">Après</a></h2>
-                  <img src="images/photos avant apres/photo après 3.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo après 3.3.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -147,15 +147,11 @@
               <div class="post-entry-1-contents">
                 <div class="photos-avant-apres">
                   <h2><a href="single.html">Avant</a></h2>
-                  <img src="images/photos avant apres/photo avant 4.jpg" alt="Image" class="img-fluid">
-                </div>
-                <div class="photos-avant-apres">
-                  <h2><a href="single.html"></a></h2>
-                  <img src="images/photos avant apres/photo après 4.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo avant 4.1.jpg" alt="Image" class="img-fluid">
                 </div>
                 <div class="photos-apres-apres">
                   <h2><a href="single.html">Après</a></h2>
-                  <img src="images/photos avant apres/photo après 4bis.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo après 4 bis1.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -170,7 +166,7 @@
                 </div>
                 <div class="photos-apres-apres">
                   <h2><a href="single.html">Après</a></h2>
-                  <img src="images/photos avant apres/photo après 5.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo après 5.1.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -181,17 +177,60 @@
               <div class="post-entry-1-contents">
                 <div class="photos-avant-apres">
                   <h2><a href="single.html">Avant</a></h2>
-                  <img src="images/photos avant apres/photo avant 6.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo avant 6.1.jpg" alt="Image" class="img-fluid">
                 </div>
                 <div class="photos-apres-apres">
                   <h2><a href="single.html">Après</a></h2>
-                  <img src="images/photos avant apres/photo avant 6.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo après 6.1.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
           </div>
-
-
+<!-- 7 -->
+<div class="col-lg-4 col-md-6 mb-4">
+  <div class="post-entry-1 h-100">
+    <div class="post-entry-1-contents">
+      <div class="photos-avant-apres">
+        <h2><a href="single.html">Avant</a></h2>
+        <img src="images/photos avant apres/photo avant 7.jpg" alt="Image" class="img-fluid">
+      </div>
+      <div class="photos-apres-apres">
+        <h2><a href="single.html">Après</a></h2>
+        <img src="images/photos avant apres/photo après 7.1.jpg" alt="Image" class="img-fluid">
+      </div>
+    </div>
+  </div>
+</div>
+<!-- 8 -->
+<div class="col-lg-4 col-md-6 mb-4">
+  <div class="post-entry-1 h-100">
+    <div class="post-entry-1-contents">
+      <div class="photos-avant-apres">
+        <h2><a href="single.html">Avant</a></h2>
+        <img src="images/photos avant apres/photo avant 8.1.jpg" alt="Image" class="img-fluid">
+      </div>
+      <div class="photos-apres-apres">
+        <h2><a href="single.html">Après</a></h2>
+        <img src="images/photos avant apres/photo après 8.1.jpg" alt="Image" class="img-fluid">
+      </div>
+    </div>
+  </div>
+</div>
+<!-- 9 -->
+<div class="col-lg-4 col-md-6 mb-4">
+  <div class="post-entry-1 h-100">
+    <div class="post-entry-1-contents">
+      <div class="photos-avant-apres">
+        <h2><a href="single.html">Avant</a></h2>
+        <img src="images/photos avant apres/photo avant 9.1.jpg" alt="Image" class="img-fluid">
+      </div>
+      <div class="photos-apres-apres">
+        <h2><a href="single.html">Après</a></h2>
+        <img src="images/photos avant apres/photo après 9.1.jpg" alt="Image" class="img-fluid">
+      </div>
+    </div>
+  </div>
+</div>
           <!-- <div class="col-12 mt-5 text-center">
             <span class="p-3">1</span>
             <a href="#" class="p-3">2</a>
