--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center">
             <h3 class="scissors text-center">Extensions à froid </h3>
-            <p class="mb-5 lead">La technique de pose d'extensions cheveux à froid anneaux est idéale si vous avez les
+            <p class="mb-5 lead">La technique de pose d'extensions cheveux à froid est idéale si vous avez les
               cheveux fragiles
               puisqu'elle n'abîmera pas vos mèches cheveux naturels. Pensez toujours à prendre soin de vos mèches de
               cheveux en évitant la coloration et en utilisant des shampoing et soins adaptés. </p>
@@ -399,7 +399,7 @@
         <div class="row justify-content-center text-center mb-5">
           <div class="col-7 text-center mb-5">
             <h2 class="scissors text-center">Méthode utilisée </h2>
-            <p class="lead">L'extension à froid anneaux est le meilleur des rajouts cheveux si votre chevelure est
+            <p class="lead">L'extension à froid est le meilleur des rajouts cheveux si votre chevelure est
               fragile de base ou si
               vous faites des colorations régulièrement. En effet, la technique de pose à froid n'altère pas la qualité
               du
