--- a/photos.html
+++ b/photos.html
@@ -61,14 +61,14 @@
 
 
             <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
-                <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                  <li ><a href="index.html" class="nav-link">Home</a></li>
-                  <li><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
-                  <li><a href="shampoings-soins.html" class="nav-link">Shampoings & Soins</a></li>
-                  <li><a href="entretien.html" class="nav-link">Entretien</a></li>
-                  <li class="active"><a href="photos.html" class="nav-link">Photos Avant Après</a></li>
-                  <li><a href="prestations-rdv.html" class="nav-link">Prestations & Rdv</a></li>
-                </ul>
+              <ul class="site-menu main-menu js-clone-nav ml-auto ">
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
+                <li><a href="shampoings-soins.html" class="nav-link">Shampoings & Soins</a></li>
+                <li><a href="entretien.html" class="nav-link">Entretien</a></li>
+                <li class="active"><a href="photos.html" class="nav-link">Photos Avant Après</a></li>
+                <li><a href="prestations-rdv.html" class="nav-link">Prestations & Rdv</a></li>
+              </ul>
             </nav>
           </div>
 
@@ -85,7 +85,8 @@
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-7">
               <h1 class="mb-3">PHOTOS AVANT / APRES </h1>
-              <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez vous</a></p>
+              <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez
+                  vous</a></p>
             </div>
           </div>
         </div>
@@ -95,148 +96,142 @@
     <div class="site-section bg-light">
       <div class="container">
         <div class="row">
-<!-- 1 -->
+          <!-- 1 -->
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="post-entry-1 h-100">
               <div class="post-entry-1-contents">
                 <div class="photos-avant-apres">
-                  <h2><a href="single.html">Avant</a></h2>
+                  <h2>Avant</h2>
                   <img src="images/photos avant apres/photo avant1.jpg" alt="Image" class="img-fluid">
                 </div>
                 <div class="photos-apres-apres">
-                  <h2><a href="single.html">Après</a></h2>
+                  <h2>Après</h2>
                   <img src="images/photos avant apres/photo après 1.1.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
           </div>
 
-<!-- 2 -->
+          <!-- 2 -->
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="post-entry-1 h-100">
               <div class="post-entry-1-contents">
                 <div class="photos-avant-apres">
-                  <h2><a href="single.html">Avant</a></h2>
+                  <h2>Avant</h2>
                   <img src="images/photos avant apres/photo avant 2.2.jpg" alt="Image" class="img-fluid">
                 </div>
                 <div class="photos-apres-apres">
-                  <h2><a href="single.html">Après</a></h2>
+                  <h2>Après</h2>
                   <img src="images/photos avant apres/photo après 2.2.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
           </div>
-<!-- 3 -->
+          <!-- 3 -->
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="post-entry-1 h-100">
               <div class="post-entry-1-contents">
                 <div class="photos-avant-apres">
-                  <h2><a href="single.html">Avant</a></h2>
+                  <h2>Avant</h2>
                   <img src="images/photos avant apres/photo avant 3.1.jpg" alt="Image" class="img-fluid">
                 </div>
                 <div class="photos-apres-apres">
-                  <h2><a href="single.html">Après</a></h2>
+                  <h2>Après</h2>
                   <img src="images/photos avant apres/photo après 3.3.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
           </div>
-<!-- 4 -->
+          <!-- 4 -->
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="post-entry-1 h-100">
               <div class="post-entry-1-contents">
                 <div class="photos-avant-apres">
-                  <h2><a href="single.html">Avant</a></h2>
+                  <h2>Avant</h2>
                   <img src="images/photos avant apres/photo avant 4.1.jpg" alt="Image" class="img-fluid">
                 </div>
                 <div class="photos-apres-apres">
-                  <h2><a href="single.html">Après</a></h2>
+                  <h2>Après</h2>
                   <img src="images/photos avant apres/photo après 4 bis1.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
           </div>
-<!-- 5 -->
-           <div class="col-lg-4 col-md-6 mb-4">
+          <!-- 5 -->
+          <div class="col-lg-4 col-md-6 mb-4">
             <div class="post-entry-1 h-100">
               <div class="post-entry-1-contents">
                 <div class="photos-avant-apres">
-                  <h2><a href="single.html">Avant</a></h2>
+                  <h2>Avant</h2>
                   <img src="images/photos avant apres/photo avant 5.jpg" alt="Image" class="img-fluid">
                 </div>
                 <div class="photos-apres-apres">
-                  <h2><a href="single.html">Après</a></h2>
+                  <h2>Après</h2>
                   <img src="images/photos avant apres/photo après 5.1.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
           </div>
-<!-- 6 -->
+          <!-- 6 -->
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="post-entry-1 h-100">
               <div class="post-entry-1-contents">
                 <div class="photos-avant-apres">
-                  <h2><a href="single.html">Avant</a></h2>
+                  <h2>Avant</h2>
                   <img src="images/photos avant apres/photo avant 6.1.jpg" alt="Image" class="img-fluid">
                 </div>
                 <div class="photos-apres-apres">
-                  <h2><a href="single.html">Après</a></h2>
+                  <h2>Après</h2>
                   <img src="images/photos avant apres/photo après 6.1.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
           </div>
-<!-- 7 -->
-<div class="col-lg-4 col-md-6 mb-4">
-  <div class="post-entry-1 h-100">
-    <div class="post-entry-1-contents">
-      <div class="photos-avant-apres">
-        <h2><a href="single.html">Avant</a></h2>
-        <img src="images/photos avant apres/photo avant 7.jpg" alt="Image" class="img-fluid">
-      </div>
-      <div class="photos-apres-apres">
-        <h2><a href="single.html">Après</a></h2>
-        <img src="images/photos avant apres/photo après 7.1.jpg" alt="Image" class="img-fluid">
-      </div>
-    </div>
-  </div>
-</div>
-<!-- 8 -->
-<div class="col-lg-4 col-md-6 mb-4">
-  <div class="post-entry-1 h-100">
-    <div class="post-entry-1-contents">
-      <div class="photos-avant-apres">
-        <h2><a href="single.html">Avant</a></h2>
-        <img src="images/photos avant apres/photo avant 8.1.jpg" alt="Image" class="img-fluid">
-      </div>
-      <div class="photos-apres-apres">
-        <h2><a href="single.html">Après</a></h2>
-        <img src="images/photos avant apres/photo après 8.1.jpg" alt="Image" class="img-fluid">
-      </div>
-    </div>
-  </div>
-</div>
-<!-- 9 -->
-<div class="col-lg-4 col-md-6 mb-4">
-  <div class="post-entry-1 h-100">
-    <div class="post-entry-1-contents">
-      <div class="photos-avant-apres">
-        <h2><a href="single.html">Avant</a></h2>
-        <img src="images/photos avant apres/photo avant 9.1.jpg" alt="Image" class="img-fluid">
-      </div>
-      <div class="photos-apres-apres">
-        <h2><a href="single.html">Après</a></h2>
-        <img src="images/photos avant apres/photo après 9.1.jpg" alt="Image" class="img-fluid">
-      </div>
-    </div>
-  </div>
-</div>
-          <!-- <div class="col-12 mt-5 text-center">
-            <span class="p-3">1</span>
-            <a href="#" class="p-3">2</a>
-            <a href="#" class="p-3">3</a>
-            <a href="#" class="p-3">4</a>
-          </div> -->
+          <!-- 7 -->
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="post-entry-1 h-100">
+              <div class="post-entry-1-contents">
+                <div class="photos-avant-apres">
+                  <h2>Avant</h2>
+                  <img src="images/photos avant apres/photo avant 7.jpg" alt="Image" class="img-fluid">
+                </div>
+                <div class="photos-apres-apres">
+                  <h2>Après</h2>
+                  <img src="images/photos avant apres/photo après 7.1.jpg" alt="Image" class="img-fluid">
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 8 -->
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="post-entry-1 h-100">
+              <div class="post-entry-1-contents">
+                <div class="photos-avant-apres">
+                  <h2>Avant</h2>
+                  <img src="images/photos avant apres/photo avant 8.1.jpg" alt="Image" class="img-fluid">
+                </div>
+                <div class="photos-apres-apres">
+                  <h2>Après</h2>
+                  <img src="images/photos avant apres/photo après 8.1.jpg" alt="Image" class="img-fluid">
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 9 -->
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="post-entry-1 h-100">
+              <div class="post-entry-1-contents">
+                <div class="photos-avant-apres">
+                  <h2>Avant</h2>
+                  <img src="images/photos avant apres/photo avant 9.1.jpg" alt="Image" class="img-fluid">
+                </div>
+                <div class="photos-apres-apres">
+                  <h2>Après</h2>
+                  <img src="images/photos avant apres/photo après 9.1.jpg" alt="Image" class="img-fluid">
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -250,7 +245,8 @@
             <h2 class="text-white scissors primary-color-icon text-center">Satisfaction garantie</h2>
             <!-- <p class="lead text-white mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam quo
               doloribus, suscipit libero, voluptate aliquam.</p> -->
-              <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez vous</a></p>
+            <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez
+                vous</a></p>
           </div>
         </div>
       </div>
@@ -272,17 +268,17 @@
             <div class="row">
               <div class="col-lg-6 ml-auto">
                 <h2 class="footer-heading mb-4">Liens</h2>
-                <ul class="list-unstyled">                
+                <ul class="list-unstyled">
                   <li><a href="prestations-rdv.html">Contactez moi</a></li>
                 </ul>
               </div>
               <div class="col-lg-6">
-              
+
               </div>
 
             </div>
           </div>
-        </div>        
+        </div>
       </div>
     </footer>
 
