--- a/prestations-rdv.html
+++ b/prestations-rdv.html
@@ -2,9 +2,19 @@
 <html lang="fr">
 
 <head>
-  <title>R'EXTENSE : pose d'extensios à gargenville</title>
+  <title>R'EXTENSE : pose d'extensions à gargenville</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://krissdel.github.io/Rextense/" />
+  <meta property="og:image" content="https://krissdel.github.io/Rextense/images/logo.png" />
+  <meta name="og:description"
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
+  <meta name="description"
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
+  <meta name="robots" content="prestations-rdv,follow" />
+
+  <link rel="canonical" href="https://krissdel.github.io/Rextense/index.html" />
 
   <link href="https://fonts.googleapis.com/css?family=DM+Sans:300,400,700&display=swap" rel="stylesheet">
 
@@ -232,7 +242,7 @@
 
 
 <!-- ----------------------------------- -->
-            <form action="javascript:rextenseContact()" name="rextenseContact" method="post">
+            <form action="mailto:delormechrist@gmail.com" name="rextenseContact" method="post">
               <div class="form-group row">
                 <div class="col-md-6 mb-4 mb-lg-0">
                   <input type="text" id="name" size=50 maxlength=50 class="form-control" placeholder="nom" required>
