--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="fr">
 
 <head>
-  <title>R'EXTENSE : pose d'extensios à gargenville</title>
+  <title>R'EXTENSE : pose d'extensions à gargenville</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://krissdel.github.io/Rextense/" />
+  <meta property="og:image" content="https://krissdel.github.io/Rextense/images/logo.png" />
+  <meta name="og:description"
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
+  <meta name="description"
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
+  <meta name="robots" content="index,follow" />
+
+  <link rel="canonical" href="https://krissdel.github.io/Rextense/index.html" />
 
   <link href="https://fonts.googleapis.com/css?family=DM+Sans:300,400,700&display=swap" rel="stylesheet">
 
@@ -54,11 +64,7 @@
       </div>
       <div class="site-mobile-menu-body"></div>
     </div>
-
-
-
     <header class="site-navbar site-navbar-target" role="banner">
-
       <div class="container">
         <div class="row align-items-center position-relative">
 
@@ -67,7 +73,6 @@
               <a href="index.html">R'EXTENSE</a>
             </div>
           </div>
-
           <div class="col-9  text-right">
 
 
@@ -92,7 +97,6 @@
 
         </div>
       </div>
-
     </header>
 
     <div class="ftco-blocks-cover-1">
@@ -209,7 +213,7 @@
               <div class="item-1 h">
                 <img src="images/coiffure steampod2.jpg" alt="Image" class="img-fluid">
                 <div class="item-1-contents">
-                  <h3>Coiffage Steampod <br>de l’Oréal</h3>
+                  <h3>Coiffure Steampod <br>de l’Oréal</h3>
                   <!-- <ul>
                     <li class="d-flex"><span>Shampoo</span> <span class="price ml-auto">$29.00</span></li>
                     <li class="d-flex"><span>Blow Dry</span><span class="price ml-auto">$10.00</span></li>
