--- a/shampoings-soins.html
+++ b/shampoings-soins.html
@@ -11,7 +11,7 @@
     content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="description"
     content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
-  <meta name="robots" content="shampoings-soins,follow" />
+  <meta name="robots" content="index,follow" />
 
   <link rel="canonical" href="https://krissdel.github.io/Rextense/index.html" />
 
