--- a/extensions-naturelles.html
+++ b/extensions-naturelles.html
@@ -12,7 +12,7 @@
     content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="description"
     content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
-  <meta name="robots" content="extensions-naturelles,follow" />
+  <meta name="robots" content="index,follow" />
 
   <link rel="canonical" href="https://krissdel.github.io/Rextense/index.html" />
 
