--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                   <div class="col-lg-8 ml-auto">
                      <div class="row">
                         <div class="col-lg-6 ml-auto">
-                           <h2 class="footer-heading mb-4">Quick Links</h2>
+                           <h2 class="footer-heading mb-4">Liens</h2>
                            <ul class="list-unstyled">
                               <li><a href="prestations-rdv.html">Contactez moi</a></li>
                            </ul>
