--- a/entretien.html
+++ b/entretien.html
@@ -80,9 +80,9 @@
         </div>
       </div>
     </div>
-    <div class="row justify-content-center  mb-5">
+    <div class="site-section">
       <div class="container">
-        <div class="row">
+        <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center">
             <p class="mb-5 lead">Après la pose des extensions de cheveux, il vient naturellement la question de
               l’entretien
