--- a/shampoings-soins.html
+++ b/shampoings-soins.html
@@ -111,16 +111,13 @@
             </p>
           </div>
         </div>
-        <div class="row">
-          <div class="col-12"></div>
-        </div>
       </div>
     </div>
     <div class="site-section section-3" data-stellar-background-ratio="0.5"
       style="background-image: url('images/photo 3 quels shampoings.jpg');">
       <div class="container">
-        <div class="row justify-content-center text-center">
-          <div class="col-10 text-center mb-5">
+        <div class="row justify-content-center  mb-5">
+          <div class="col-md-7 text-center">
             <h2 class="text-white scissors primary-color-icon text-center">COMMENT PRENDRE SOIN DE SES EXTENSIONS ?</h2>
             <p class="lead text-white mb-5">Il est recommandé d’utiliser un après-shampoing ainsi que des soins
               capillaires pour nourrir vos extensions. Dans l’idéal, il faudrait même utiliser des masques et sérum pour
@@ -133,14 +130,17 @@
         </div>
       </div>
     </div>
-    <div class="row justify-content-center mb-5">
-      <div class="col-md-7 text-center">
-        <h3 class="scissors text-center">CONCLUSION</h3>
-        <p class="mb-5 lead">Le choix du shampoing est une étape nécessaire pour prendre soin de vos extensions
-          capillaires et garder leur éclat durablement. <br>
-          Pensez également à entretenir vos extensions avec des soins, masques, huiles et sérum au minimum une fois par
-          semaine.
-        </p>
+    <div class="container">
+      <div class="row justify-content-center  mb-5">
+        <div class="col-md-7 text-center">
+          <h3 class="scissors text-center">CONCLUSION</h3>
+          <p class="mb-5 lead">Le choix du shampoing est une étape nécessaire pour prendre soin de vos extensions
+            capillaires et garder leur éclat durablement. <br>
+            Pensez également à entretenir vos extensions avec des soins, masques, huiles et sérum au minimum une fois
+            par
+            semaine.
+          </p>
+        </div>
       </div>
     </div>
     <footer class="site-footer">
