--- a/entretien.html
+++ b/entretien.html
@@ -133,7 +133,8 @@
             </p>
             <ol>
               <li>La tête toujours en arrière.</li>
-              <li>Ne pas frotter fort le cuir chevelu au moment des shampoings mais faire des mouvements circulaires.</li>
+              <li>Ne pas frotter fort le cuir chevelu au moment des shampoings mais faire des mouvements circulaires.
+              </li>
               <li>Enfin, rincez et répétez l’opération une seconde fois si nécessaire.</li>
             </ol>
           </div>
