--- a/extensions-naturelles.html
+++ b/extensions-naturelles.html
@@ -86,8 +86,8 @@
     </div>
     <div class="site-section">
       <div class="container">
-        <div class="row justify-content-center text-center mb-5">
-          <div class="col-7 text-center mb-5">
+        <div class="row justify-content-center mb-5">
+          <div class="col-md-7 text-center">
             <h2 class="scissors text-center">QU’EST-CE QUE LA QUALITE « REMY HAIR » ?</h2>
             <p class="lead">Le Remy Hair est un label de qualité des extensions de cheveux et non une marque. Ce sont
               des cheveux vierges et naturels qui n’ont subi aucun traitement chimique. Ils sont considérés comme les
@@ -98,95 +98,97 @@
       </div>
     </div>
     <!-- =========[critères des cheveux Remy Hair]====================================================== -->
-    <div class="site-section bg-light">
+    <div class="site-section">
       <div class="container">
-        <div class="row justify-content-center text-center mb-5">
-          <div class="col-7 text-center mb-5">
+        <div class="row justify-content-center mb-5">
+          <div class="col-md-7 text-center">
             <h2 class="scissors text-center">LES CRITERES DES CHEVEUX REMY HAIR </h2>
-            <ul class="critères_des_cheveux">
+            <ul class="lead">
               <li>Cuticules intactes</li>
               <li>Tous les cheveux doivent provenir de la même personne</li>
               <li>Tous les cheveux doivent être coupés et assemblés dans le même sens</li>
             </ul>
           </div>
         </div>
-        <!-- ================================================================================================ -->
       </div>
     </div>
-    <div class="site-section section-3" data-stellar-background-ratio="0.5"
-      style="background-image: url('images/photo 4 sur site.jpg');">
-      <div class="container">
-        <div class="row justify-content-center text-center">
-          <div class="col-7 text-center mb-5">
-            <h2 class="text-white scissors primary-color-icon text-center">LES DIFFÉRENCES ENTRE LES CHEVEUX REMY HAIR
-              ET NON-REMY HAIR
-            </h2>
-            <h3 class="text-white text-center">La façon de collecter les cheveux. </h3>
-            <p class="lead text-white mb-5">ILes cheveux Remy Hair sont collectés par une méthode qui garantit l’aspect
-              naturel des cheveux. Ils sont tous alignées dans le même sens.</p>
-            <h3 class="text-white text-center">La qualité des cheveux</h3>
-            <p class="lead text-white mb-5">Les cheveux Remy Hair ont une apparence plus naturelle, plus brillante et
-              plus lisse, que les cheveux qui ne sont pas « Remy Hair ». Cela est dû à la méthode de collecte des
-              cheveux. </p>
-          </div>
+    <!-- ================================================================================================ -->
+  </div>
+  </div>
+  <div class="site-section section-3" data-stellar-background-ratio="0.5"
+    style="background-image: url('images/photo 4 sur site.jpg');">
+    <div class="container">
+      <div class="row justify-content-center mb-5">
+        <div class="col-md-7 text-center">
+          <h2 class="text-white scissors primary-color-icon text-center">LES DIFFÉRENCES ENTRE LES CHEVEUX REMY HAIR
+            ET NON-REMY HAIR
+          </h2>
+          <h3 class="text-white text-center">La façon de collecter les cheveux. </h3>
+          <p class="lead text-white mb-5">ILes cheveux Remy Hair sont collectés par une méthode qui garantit l’aspect
+            naturel des cheveux. Ils sont tous alignées dans le même sens.</p>
+          <h3 class="text-white text-center">La qualité des cheveux</h3>
+          <p class="lead text-white mb-5">Les cheveux Remy Hair ont une apparence plus naturelle, plus brillante et
+            plus lisse, que les cheveux qui ne sont pas « Remy Hair ». Cela est dû à la méthode de collecte des
+            cheveux. </p>
         </div>
       </div>
     </div>
-    <div class="site-section bg-light">
-      <div class="container">
-        <div class="row justify-content-center text-center mb-5">
-          <div class="col-7 text-center mb-5">
-            <h2 class="scissors text-center">La durée de vie</h2>
-            <p class="lead">Les extensions de cheveux Remy hair sont des cheveux de bien meilleure qualité. C’est pour
-              cette raison qu’ils durent plus longtemps. Il est possible de les garder de 2 mois jusqu’à une année
-              complète. </p>
-          </div>
+  </div>
+  <div class="site-section bg-light">
+    <div class="container">
+      <div class="row justify-content-center mb-5">
+        <div class="col-md-7 text-center">
+          <h2 class="scissors text-center">La durée de vie</h2>
+          <p class="lead">Les extensions de cheveux Remy hair sont des cheveux de bien meilleure qualité. C’est pour
+            cette raison qu’ils durent plus longtemps. Il est possible de les garder de 2 mois jusqu’à une année
+            complète. </p>
         </div>
       </div>
     </div>
-    <div class="site-section section-3" data-stellar-background-ratio="0.5"
-      style="background-image: url('images/devis sur mesure.jpg');">
-      <div class="container">
-        <div class="row justify-content-center text-center">
-          <div class="col-7 text-center mb-5">
-            <h2 class="text-white scissors primary-color-icon text-center">Pour conclure</h2>
-            <p class="lead text-white mb-5">les cheveux Remy hair sont les meilleurs cheveux pour les extensions. Ils
-              sont plus chers que les autres, mais cela est justifié par leur durée de vie plus longue que les non Remy
-              hair.</p>
-            <p class="lead text-white mb-5">Enfin, le meilleur avantage des Remy hair est que vous pouvez les boucler,
-              les lisser et les laver comme vos cheveux naturels sans aucun dommage.</p>
-            <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez
-                vous</a></p>
-          </div>
+  </div>
+  <div class="site-section section-3" data-stellar-background-ratio="0.5"
+    style="background-image: url('images/devis sur mesure.jpg');">
+    <div class="container">
+      <div class="row justify-content-center mb-5">
+        <div class="col-md-7 text-center">
+          <h2 class="text-white scissors primary-color-icon text-center">Pour conclure</h2>
+          <p class="lead text-white mb-5">les cheveux Remy hair sont les meilleurs cheveux pour les extensions. Ils
+            sont plus chers que les autres, mais cela est justifié par leur durée de vie plus longue que les non Remy
+            hair.</p>
+          <p class="lead text-white mb-5">Enfin, le meilleur avantage des Remy hair est que vous pouvez les boucler,
+            les lisser et les laver comme vos cheveux naturels sans aucun dommage.</p>
+          <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez
+              vous</a></p>
         </div>
       </div>
     </div>
-    <footer class="site-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3">
-            <img src="images/Sam.jpg" alt="Image" class="img-fluid mb-5">
-            <h2 class="footer-heading mb-3">A propos de moi</h2>
-            <p>Technicienne spécialiste des extensions de cheveux à froid.
-              je mets mon expertise à votre service sur Gargenville et les communes limitrophes à mon domicile ou
-              directement chez vous.
-            </p>
-          </div>
-          <div class="col-lg-8 ml-auto">
-            <div class="row">
-              <div class="col-lg-6 ml-auto">
-                <h2 class="footer-heading mb-4">Liens</h2>
-                <ul class="list-unstyled">
-                  <li><a href="prestations-rdv.html">Contacez moi</a></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-              </div>
+  </div>
+  <footer class="site-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3">
+          <img src="images/Sam.jpg" alt="Image sam" class="img-fluid mb-5">
+          <h2 class="footer-heading mb-3">A propos de moi</h2>
+          <p>Technicienne spécialiste des extensions de cheveux à froid.
+            je mets mon expertise à votre service sur Gargenville et les communes limitrophes à mon domicile ou
+            directement chez vous.
+          </p>
+        </div>
+        <div class="col-lg-8 ml-auto">
+          <div class="row">
+            <div class="col-lg-6 ml-auto">
+              <h2 class="footer-heading mb-4">Liens</h2>
+              <ul class="list-unstyled">
+                <li><a href="prestations-rdv.html">Contacez moi</a></li>
+              </ul>
+            </div>
+            <div class="col-lg-6">
             </div>
           </div>
         </div>
       </div>
-    </footer>
+    </div>
+  </footer>
   </div>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery-migrate-3.0.0.js"></script>
